feat: implement zero-copy streaming for attachment uploads
- Added a new entry point in JavaScript to handle zero-copy streaming uploads to R2.
- Updated the Rust backend to support the new upload route with JWT validation.
- Enhanced the API to generate full URLs for the new azure-upload endpoint.
- Introduced new dependencies: `futures-util` and `wasm-streams` for improved async handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,14 @@ js-sys = "0.3"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Crypto", "CryptoKey", "SubtleCrypto", "WorkerGlobalScope", "Pbkdf2Params"] }
 console_error_panic_hook = "0.1.7"
+wasm-streams = "0.4"
 
 # Axum and Routing
 axum = { version = "0.8", default-features = false, features=["json", "macros", "form", "multipart", "query"] }
 tower-service = "0.3"
 tower-http = { version = "0.5", features = ["cors"] }
 bytes = "1"
+futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 
 # Data & Serialization
 serde = { version = "1.0", features = ["derive"] }
